# vidforge

./: .gitignore  Makefile
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/graph/: builder.py  state.py
backend/app/graph/nodes/: clarify.py  deliver.py  prompt_forge.py  research.py  score.py  video_gen.py
backend/app/services/: anthropic_client.py  butterbase.py  file_processor.py  ionrouter.py  miromind.py  openai_client.py  photon.py  seedance.py
backend/tribe_sidecar/: main.py
frontend/: .env.local.example  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  types.ts
frontend/app/create/: page.tsx
frontend/app/generate/[id]/: page.tsx
frontend/app/prompts/[id]/: page.tsx
frontend/app/results/[id]/: page.tsx
notebooks/: tribe_colab.ipynb
